# ji

./: .gitignore  README.md  pyproject.toml
src/ji/: cli.py  html.py  model.py  pretty.py
