[project]
name = "ji"
version = "0.1.0"
description = "minimal CLI-based task tracker"
readme = "README.md"
authors = [
    { name = "TJ Bai", email = "tjianbai@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "rich>=13.9.4",
]

[project.scripts]
ji = "ji.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
